--- a/MacOS/kitty/kitty.conf
+++ b/MacOS/kitty/kitty.conf
@@ -39,8 +39,8 @@ select_by_word_characters @-./_~?&=%+#
 
 # --[ windows ] ------------------------------------------------------------ {{{
 remember_window_size yes
-initial_window_width 170
-initial_window_height 50
+initial_window_width 175
+initial_window_height 54
 enabled_layouts tall,stack
 tab_bar_edge top
 window_border_width 1pt
@@ -52,10 +52,12 @@ window_padding_width 5
 # }}}
 
 # --[ Background ] -------------------------------------------------------------- {{{
-background_opacity 0.71
-background_image_layout tiled
+# background_opacity 0.71
+background_opacity 0.8
+dynamic_background_opacity no
+background_image ~/.config/kitty/wallpaper_2.jpg
+background_image_layout centered
 background_image_linear no
-dynamic_background_opacity yes
 # }}}
 
 # --[ mouse ] -------------------------------------------------------------- {{{
