--- a/MacOS/kitty/kitty.conf
+++ b/MacOS/kitty/kitty.conf
@@ -78,7 +78,6 @@ force_ltr yes
 # }}}
 
 # --[ title bar ] ------------------------------------------------------------- {{{
-# wayland_titlebar_color system
 hide_window_decorations titlebar-only
 # }}}
 
@@ -105,8 +104,10 @@ active_tab_title_template "{fmt.fg._7aa2f7}{fmt.bg.default}{fmt.fg._1a1b26}{f
 
 # --[ OS Configuration ] --------------------------------------------------------------- {{{
 macos_titlebar_color system
-macos_window_resizable no
-macos_menubar_title_max_length 10
+macos_window_resizable no 
+macos_show_window_title_in none
+# macos_menubar_title_max_length 10
+macos_quit_when_last_window_closed yes
 # }}}
 
 allow_remote_control            yes
