--- a/MacOS/kitty/kitty.conf
+++ b/MacOS/kitty/kitty.conf
@@ -55,7 +55,7 @@ window_padding_width 5
 # background_opacity 0.71
 background_opacity 0.8
 dynamic_background_opacity no
-background_image ~/.config/kitty/wallpaper_2.jpg
+background_image ~/.config/kitty/kasumigaoka_utaha.png
 background_image_layout centered
 background_image_linear no
 # }}}
