--- a/MacOS/nvim/stylua.toml
+++ b/MacOS/nvim/stylua.toml
@@ -1,3 +1,7 @@
 indent_type = "Spaces"
 indent_width = 4
 column_width = 120
+quote_style = "AutoPreferDouble"
+call_parentheses = "Always"
+collapse_simple_statement = false
+line_endings = "Unix"
