--- a/MacOS/nvim/stylua.toml
+++ b/MacOS/nvim/stylua.toml
@@ -3,5 +3,5 @@ indent_width = 4
 column_width = 120
 quote_style = "AutoPreferDouble"
 call_parentheses = "Always"
-collapse_simple_statement = false
+# collapse_simple_statement = false
 line_endings = "Unix"
