--- a/MacOS/kitty/kitty.conf
+++ b/MacOS/kitty/kitty.conf
@@ -1,5 +1,6 @@
 # --[ Basic Configuration ] -------------------------------------------------------------- {{{
-term xterm-256color
+# term xterm-256color
+term xterm-kitty
 enable_image_display yes
 enable_graphics yes
 # }}}
@@ -49,13 +50,14 @@ window_padding_width 5
 # }}}
 
 # --[ Background ] -------------------------------------------------------------- {{{
-# background_opacity 0.71
+# background_opacity 0.75
 background_opacity 0.8
 dynamic_background_opacity yes
-background_image ~/.config/kitty/kasumigaoka_utaha.png
-# background_image_layout centered
-background_image_linear no
-background_image_scale stretch
+
+# Anime wallpaper
+# background_image ~/.config/kitty/kasumigaoka_utaha.png
+# background_image_layout scaled
+# background_image_linear yes
 # }}}
 
 # --[ mouse ] -------------------------------------------------------------- {{{
