--- a/MacOS/kitty/maps.conf
+++ b/MacOS/kitty/maps.conf
@@ -15,6 +15,9 @@ map cmd+ctrl+h          previous_tab
 # -- key maps -------------------------------------------------------- {{{
 # cmd + t (Create new tab)
 # cmd + w (Delete current tab)
+
+# Open new tabs/windows in the SAME directory as the current one
+# This saves you from having to 'cd' every time you open a new tab
 # }}}
 
 # map ctrl+space>ctrl+z toggle_layout stack
@@ -31,6 +34,7 @@ map cmd+6 goto_tab 6
 map cmd+7 goto_tab 7
 map cmd+8 goto_tab 8
 map cmd+9 goto_tab 9
+
 #
 # map ctrl+1 goto_tab 1
 # map ctrl+2 goto_tab 2
