--- a/MacOS/kitty/kitty.conf
+++ b/MacOS/kitty/kitty.conf
@@ -1,5 +1,4 @@
 # --[ Basic Configuration ] -------------------------------------------------------------- {{{
-# term xterm-256color
 term xterm-kitty
 enable_image_display yes
 enable_graphics yes
@@ -28,17 +27,18 @@ underline_hyperlinks hover
 url_style straight
 
 # The color for highlighting URLs on mouse-over
-# url_color #73daca 
+url_color #7aa2f7
 paste_actions quote-urls-at-prompt
 strip_trailing_spaces never
 select_by_word_characters @-./_~?&=%+#
-# show_hyperlink_targets yes
 # }}}
 
 # --[ windows ] ------------------------------------------------------------ {{{
 remember_window_size yes
-initial_window_width 175
-initial_window_height 54
+# initial_window_width 175
+# initial_window_height 54
+initial_window_width 222c
+initial_window_height 53c
 enabled_layouts tall,stack
 tab_bar_edge top
 window_border_width 1pt
@@ -58,17 +58,23 @@ dynamic_background_opacity yes
 # background_image ~/.config/kitty/kasumigaoka_utaha.png
 # background_image_layout scaled
 # background_image_linear yes
+
 # }}}
 
 # --[ mouse ] -------------------------------------------------------------- {{{
 copy_on_select                  yes
-scrollback_lines                20000
+scrollback_lines                2000
 scrollback_pager_history_size 1000
-scrollback_pager_background_opacity 0.9
+scrollback_pager_background_opacity 0.9 
+scrollbar_gap 0.5 
+scrollbar_handle_opacity 0.2 
+scrollbar_hover_width 0.5 
+
 # The modifiers to use rectangular selection (i.e. to select text in a
 # rectangular block with the mouse)
 # rectangle_select_modifiers ctrl+alt
-mouse_hide_wait                 15
+mouse_hide_wait                 3
+
 # Set the active window to the window under the mouse when moving the mouse around
 focus_follows_mouse             no
 disable_ligatures               cursor
@@ -76,7 +82,9 @@ force_ltr yes
 # }}}
 
 # --[ gpu ] ------------------------------------------------------------- {{{
-# gpu_oversampling 2x
+input_delay 2
+sync_to_monitor yes
+repaint_delay 16
 # }}}
 
 # --[ title bar ] ------------------------------------------------------------- {{{
@@ -90,23 +98,34 @@ pointer_shape_when_dragging beam
 cursor_shape underline
 cursor_shape_unfocused hollow
 cursor_underline_thickness 2.0
-cursor_blink_interval -1
+cursor_blink_interval -2 ease-in-out
+cursor_stop_blinking_after 3
 # }}}
 
-# --[ tabs ] --------------------------------------------------------------- {{{
-# Tab bar
-tab_bar_margin_width      9
-tab_bar_margin_height     9 0
-tab_bar_style             separator
-tab_bar_min_tabs          1
-tab_separator             ""
-tab_title_template "{fmt.fg._1a1b26}{fmt.bg.default}{fmt.fg._7dcfff}{fmt.bg._1a1b26}{fmt.fg._7dcfff}{fmt.bg._1a1b26} {title[:40] + (title[40:] and '…')} {fmt.fg._1a1b26}{fmt.bg.default} "
-active_tab_title_template "{fmt.fg._7aa2f7}{fmt.bg.default}{fmt.fg._1a1b26}{fmt.bg._7aa2f7}{index}:{fmt.fg._1a1b26}{fmt.bg._7aa2f7} {title[:15] + (title[15:] and '…')} {fmt.fg._7aa2f7}{fmt.bg.default} "
+# --[ Tab Bar Styling ] ---------------------------------------------------
+
+tab_bar_edge            top
+tab_bar_style           separator
+tab_bar_margin_width    9
+tab_bar_margin_height   9 0
+tab_bar_min_tabs        1
+tab_separator           ""
+
+# --- Colors (Tokyo Night Palette) ---
+# Active: #7aa2f7 (Blue)
+# Inactive: #292e42 (Darker Blue)
+# Foreground: #c0caf5
+
+# Inactive Tab: Shows index and a shortened title
+tab_title_template "{fmt.fg._292e42}{fmt.bg.default}{fmt.fg._c0caf5}{fmt.bg._292e42} {index}  {title[:15]} {fmt.fg._292e42}{fmt.bg.default} "
+
+# Active Tab
+active_tab_title_template "{fmt.fg._7aa2f7}{fmt.bg.default}{fmt.fg._1a1b26}{fmt.bg._7aa2f7} {index}  {title}{fmt.fg._3b4261} {fmt.fg._1a1b26} {fmt.fg._7aa2f7}{fmt.bg.default} "
 #}}}
 
 # --[ OS Configuration ] --------------------------------------------------------------- {{{
 # macos_titlebar_color system
-macos_window_resizable no 
+macos_window_resizable no
 macos_show_window_title_in none
 # macos_menubar_title_max_length 10
 macos_quit_when_last_window_closed yes
@@ -119,3 +138,6 @@ allow_remote_control            yes
 # --[ Map configuration ] --------------------------------------------------------------- {{{
 globinclude maps.conf
 # }}}
+
+
+
