--- a/MacOS/fastfetch/config.jsonc
+++ b/MacOS/fastfetch/config.jsonc
@@ -1,5 +1,3 @@
-// Source: https://github.com/eldritch-theme/fastfetch/tree/master
-
 {
   "$schema": "https://github.com/fastfetch-cli/fastfetch/raw/dev/doc/json_schema.json",
   "logo": {
@@ -9,9 +7,6 @@
       "right": 0,
       "top": 3,
     },
-  },
-  "general": {
-    "multithreading": true,
   },
   "display": {
     "separator": "➜   ",
@@ -30,22 +25,17 @@
     },
     {
       "key": "    󰌢 Machine      ",
-      "keyColor": "cyan",
+      "keyColor": "bright_blue",
       "type": "host",
     },
     {
       "key": "     Kernel       ",
-      "keyColor": "blue",
+      "keyColor": "cyan",
       "type": "kernel",
     },
     {
-      "key": "    󰅐 Uptime       ",
-      "keyColor": "green",
-      "type": "uptime",
-    },
-    {
       "key": "     Packages     ",
-      "keyColor": "red",
+      "keyColor": "bright_red",
       "type": "packages",
     },
     "break",
@@ -56,33 +46,23 @@
     "break",
     {
       "key": "     WM           ",
-      "keyColor": "magenta",
+      "keyColor": "yellow",
       "type": "wm",
     },
     {
       "key": "    󰚗 DE           ",
-      "keyColor": "red",
+      "keyColor": "bright_yellow",
       "type": "de",
     },
     {
       "key": "     Shell        ",
-      "keyColor": "green",
+      "keyColor": "bright_green",
       "type": "shell",
     },
     {
       "key": "     Terminal     ",
-      "keyColor": "cyan",
+      "keyColor": "bright_magenta",
       "type": "terminal",
-    },
-    {
-      "key": "     Theme        ",
-      "keyColor": "yellow",
-      "type": "terminaltheme",
-    },
-    {
-      "key": "     Font         ",
-      "keyColor": "blue",
-      "type": "terminalfont",
     },
     "break",
     {
@@ -92,7 +72,7 @@
     "break",
     {
       "key": "     Display      ",
-      "keyColor": "Red",
+      "keyColor": "bright_cyan",
       "type": "display",
     },
     {
@@ -102,12 +82,12 @@
     },
     {
       "key": "    󰍛 GPU          ",
-      "keyColor": "cyan",
+      "keyColor": "blue",
       "type": "gpu",
     },
     {
       "key": "    󰑭 Memory       ",
-      "keyColor": "blue",
+      "keyColor": "red",
       "type": "memory",
     },
     "break",
