--- a/MacOS/kitty/kitty.conf
+++ b/MacOS/kitty/kitty.conf
@@ -98,8 +98,8 @@ pointer_shape_when_dragging beam
 cursor_shape underline
 cursor_shape_unfocused hollow
 cursor_underline_thickness 2.0
-cursor_blink_interval -2 ease-in-out
-cursor_stop_blinking_after 3
+cursor_blink_interval -1 ease-in-out
+cursor_stop_blinking_after 3.0
 # }}}
 
 # --[ Tab Bar Styling ] ---------------------------------------------------
@@ -117,10 +117,10 @@ tab_separator           ""
 # Foreground: #c0caf5
 
 # Inactive Tab: Shows index and a shortened title
-tab_title_template "{fmt.fg._292e42}{fmt.bg.default}{fmt.fg._c0caf5}{fmt.bg._292e42} {index}  {title[:15]} {fmt.fg._292e42}{fmt.bg.default} "
+tab_title_template "{fmt.fg._292e42}{fmt.bg.default}{fmt.fg._c0caf5}{fmt.bg._292e42} {index}  {title[:12]} {fmt.fg._292e42}{fmt.bg.default} "
 
 # Active Tab
-active_tab_title_template "{fmt.fg._7aa2f7}{fmt.bg.default}{fmt.fg._1a1b26}{fmt.bg._7aa2f7} {index}  {title}{fmt.fg._3b4261} {fmt.fg._1a1b26} {fmt.fg._7aa2f7}{fmt.bg.default} "
+active_tab_title_template "{fmt.fg._7aa2f7}{fmt.bg.default}{fmt.fg._1a1b26}{fmt.bg._7aa2f7} {index}  {title[:15]}{fmt.fg._3b4261} {fmt.fg._1a1b26} {fmt.fg._7aa2f7}{fmt.bg.default} "
 #}}}
 
 # --[ OS Configuration ] --------------------------------------------------------------- {{{
